# ImageCompressPro

./: Cargo.toml
.agents/skills/image-compress-skill/: SKILL.md
.agents/skills/image-compress-skill/.agents/skills/image-compress-skill/scripts/: install.sh
