[package]
name = "image-compress-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
image = "0.25.9"
imagequant = "4.4.1"
oxipng = "10.1.0"
png = "0.18.0"
reqwest = { version = "0.13.1", features = ["blocking"] }
tempfile = "3.24.0"
url = "2.5.8"
webp = "0.3.1"
